--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3"
 
 services:
-  backend:
+  app:
     build:
       context: .
     ports:
       - "8000:8000"
     volumes:
-      - ./:/app/
+      - ./app:/app
     command: >
       sh -c "python manage.py runserver 0:8000"
