--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,7 @@ services:
       - POSTGRES_DB=app
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
+    volumes:
+      - fulltummy_db:/var/lib/postgresql/data
+volumes:
+  fulltummy_db:
